--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,15 +4,9 @@
   "compatibility_date": "2024-01-01",
   "pages_build_output_dir": ".",
   
-  // Optional: Add your account ID here
+  // Add your Cloudflare Account ID here for local deployments
+  // For CI/CD, this will be provided via environment variable
   // "account_id": "your-account-id-here",
-  
-  // Build configuration
-  "build": {
-    "command": "",
-    "cwd": ".",
-    "watch_paths": ["**/*.html", "**/*.css", "**/*.js"]
-  },
   
   // Compatibility flags for Node.js APIs (if needed for edge functions)
   // Uncomment the line below if you need Node.js compatibility
