--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,11 @@ yarn-error.log*
 # Build output
 dist/
 build/
+css/style.min.css
+index.min.html
+*.min.css
+*.min.js
+*.min.html
 
 # Cache
 .cache/
