chore: update dependencies and wrangler configuration
- Updated `wrangler` from version 3.0.0 to 4.46.0 in package.json.
- Reintroduced `html-minifier-terser` in devDependencies.
- Modified `wrangler.toml` to include observability settings, disabling logs and adjusting sampling rates.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,13 @@ compatibility_date = "2024-01-01"
 # Workers Site configuration for serving static assets
 [site]
 bucket = "."
+
+
+
+
+[observability]
+[observability.logs]
+enabled = false
+head_sampling_rate = 1
+invocation_logs = true
+persist = true
